--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <scm>
         <connection>scm:git:git://github.com/csueiras/spring-boot-starter-acme.git</connection>
-        <developerConnection>scm:git:ssh://github.com:csueiras/spring-boot-starter-acme.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:csueiras/spring-boot-starter-acme.git</developerConnection>
         <url>https://github.com/csueiras/spring-boot-starter-acme/tree/master</url>
     </scm>
 
