--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git@github.com:csueiras/spring-boot-starter-acme.git</connection>
-        <developerConnection>scm:git:git@github.com:csueiras/spring-boot-starter-acme.git</developerConnection>
+        <connection>scm:git:https://github.com:csueiras/spring-boot-starter-acme.git</connection>
+        <developerConnection>scm:git:https://github.com:csueiras/spring-boot-starter-acme.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -53,6 +53,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.scm.id>github</project.scm.id>
         <java.version>11</java.version>
         <spring.boot.version>2.3.4.RELEASE</spring.boot.version>
         <acme4j.version>2.10</acme4j.version>
