--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
     </developers>
 
     <scm>
-        <connection>scm:git:https://github.com:csueiras/spring-boot-starter-acme.git</connection>
-        <developerConnection>scm:git:https://github.com:csueiras/spring-boot-starter-acme.git</developerConnection>
+        <connection>scm:git:https://github.com/csueiras/spring-boot-starter-acme.git</connection>
+        <developerConnection>scm:git:https://github.com/csueiras/spring-boot-starter-acme.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
