--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - master
+      - release
 jobs:
   pr:
     name: "Release"
@@ -9,8 +9,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: master
+
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -33,9 +32,6 @@ jobs:
           git config --global committer.name "GitHub"
           git config --global author.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --global author.name "${GITHUB_ACTOR}"
-
-      - name: Checkout master branch
-        run: git checkout master
 
       - name: Import GPG Owner Trust
         run: echo ${{secrets.GPG_OWNERTRUST}} | base64 --decode | gpg --import-ownertrust
