--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,9 +34,9 @@ jobs:
       - name: Configure git
         run: |
           git config --global committer.email "noreply@github.com"
-          git config --global committer.name "GitHub"
+          git config --global committer.name "Release Bot"
           git config --global author.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git config --global author.name "${GITHUB_ACTOR}"
+          git config --global author.name "Release Bot"
 
       - name: Import GPG Owner Trust
         run: echo ${{secrets.GPG_OWNERTRUST}} | base64 --decode | gpg --import-ownertrust
