--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,8 +17,8 @@ jobs:
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
-          gpg-private-key: ${{ secrets.GPG_SECRET_KEYS }}
-          gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
+          gpg-private-key: ${{ secrets.GPG_SECRET_KEYS }} # this cannot be b64 encoded to be used here
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
       - name: Cache .m2
         uses: actions/cache@v1
